feat(day-3): completed day-3 part-2 in COBOL

--- a/day-3/Makefile
+++ b/day-3/Makefile
@@ -1,9 +1,18 @@
 
 build: solution
+build2: solution2
 
 solution: solution.cbl
 	cobc -x solution.cbl
 
+
+solution2: solution2.cbl
+	cobc -x solution2.cbl
+
 run: solution
 	./solution
+
+
+run2: solution2
+	./solution2
 
