feat(day-4): solution for day4 done

--- a/day-4/Makefile
+++ b/day-4/Makefile
@@ -2,7 +2,15 @@
 solution.beam: solution.erl
 	erl -compile solution.erl
 
+solution2.beam: solution2.erl
+	erl -compile solution2.erl
+
 build: solution.beam
+build2: solution2.beam
 
 run: solution.beam
 	erl -noshell -s solution main -s init stop
+
+
+run2: solution2.beam
+	erl -noshell -s solution2 main -s init stop
